# Fan-Control

./: CMakeLists.txt  README.md  fanControl.conf  main.cpp
lib/rudeconfig-5.0.5/: AbstractData.lo  AbstractOrganiser.lo  AbstractParser.lo  AbstractWriter.lo  Base64Encoder.lo  ChangeLog  Comment.lo  ConfigImpl.lo  DataLine.lo  File.lo  KeyValue.lo  Makefile  Makefile.am  Makefile.in  ParserJuly2004.lo  RealOrganiser.lo  Section.lo  WhiteSpace.lo  Writer.lo  config.lo  config.status  configure  configure.ac  librudeconfig.la  libtool
lib/rudeconfig-5.0.5/.deps/: AbstractData.Plo  AbstractOrganiser.Plo  AbstractParser.Plo  AbstractWriter.Plo  Base64Encoder.Plo  Comment.Plo  ConfigImpl.Plo  DataLine.Plo  File.Plo  KeyValue.Plo  ParserJuly2004.Plo  RealOrganiser.Plo  Section.Plo  WhiteSpace.Plo  Writer.Plo  config.Plo
lib/rudeconfig-5.0.5/.libs/: librudeconfig.lai
lib/rudeconfig-5.0.5/src/: AbstractData.cpp  AbstractData.h  AbstractOrganiser.cpp  AbstractOrganiser.h  AbstractParser.cpp  AbstractParser.h  AbstractWriter.cpp  AbstractWriter.h  Base64Encoder.cpp  Base64Encoder.h  Comment.cpp  Comment.h  ConfigImpl.h  DataLine.cpp  DataLine.h  File.h  KeyValue.cpp  KeyValue.h  ParserJuly2004.cpp  ParserJuly2004.h  WhiteSpace.cpp  WhiteSpace.h  Writer.cpp  Writer.h  config.cpp  config.h
package/DEBIAN/: control  postinst  postrm  prerm
package/etc/fanControl/: default.conf
package/lib/systemd/system/: fan-control.service
release/: fanControl_1.0-2_all.deb
